Removed Hugging Face token
